[workspace]
resolver = "2"

members = [
    "vhost-device-gpio",
    "vhost-device-i2c",
    "vhost-device-input",
    "vhost-device-rng",
    "vhost-device-scsi",
    "vhost-device-scmi",
    "vhost-device-sound",
    "vhost-device-spi",
    "vhost-device-template",
    "vhost-device-vsock",
]

[workspace.dependencies]
vhost = "0.12"
vhost-user-backend = "0.16"
virtio-bindings = "0.2.2"
virtio-queue = "0.13"
virtio-vsock = "0.7"
vm-memory = "0.15.0"
vmm-sys-util = "0.12"
