[workspace]
resolver = "2"

members = [
    "vhost-device-can",
    "vhost-device-console",
    "vhost-device-gpio",
    "vhost-device-i2c",
    "vhost-device-input",
    "vhost-device-rng",
    "vhost-device-scsi",
    "vhost-device-scmi",
    "vhost-device-sound",
    "vhost-device-spi",
    "vhost-device-template",
    "vhost-device-vsock",
]
