[package]
name = "vhost-device-i2c"
version = "0.1.0"
authors = ["Viresh Kumar <viresh.kumar@linaro.org>"]
description = "vhost i2c backend device"
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
keywords = ["i2c", "vhost", "virt", "backend"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = ">=3.0",  features = ["derive"] }
env_logger = ">=0.9"
libc = ">=0.2.95"
log = ">=0.4.6"
thiserror = "1.0"
vhost = { version = "0.4", features = ["vhost-user-slave"] }
vhost-user-backend = "0.5"
virtio-bindings = ">=0.1"
virtio-queue = "0.4"
vm-memory = ">=0.8"
vmm-sys-util = "=0.10.0"

[dev-dependencies]
virtio-queue = { version = "0.4", features = ["test-utils"] }
vm-memory = { version = ">=0.8.0", features = ["backend-mmap", "backend-atomic"] }
