[package]
name = "vhost-device-rng"
version = "0.1.0"
authors = ["Mathieu Poirier <mathieu.poirier@linaro.org>"]
description = "vhost RNG backend device"
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
keywords = ["rng", "vhost", "virt", "backend"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2018"

[dependencies]
clap = { version = ">=3.0",  features = ["derive"] }
env_logger = ">=0.9"
epoll = "4.3"
libc = ">=0.2.95"
log = ">=0.4.6"
rand = ">=0.8.5"
tempfile = "3.2.0"
thiserror = "1.0"
vhost = { version = "0.4", features = ["vhost-user-slave"] }
vhost-user-backend = "0.3"
virtio-bindings = ">=0.1"
virtio-queue = "0.2"
vm-memory = ">=0.7"
vmm-sys-util = ">=0.9.0"

[dev-dependencies]
virtio-queue = { version = "0.2", features = ["test-utils"] }
vm-memory = { version = ">=0.7.0", features = ["backend-mmap", "backend-atomic"] }
