[package]
name = "vhost-user-scsi"
version = "0.1.0"
authors = ["Gaelan Steele <gbs@canishe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vhost-user-backend = "0.1"
epoll = "4.3.1"
vm-memory = "0.7"
vhost = { version = "0.3", features = ["vhost-user-slave"] }
virtio-bindings = "0.1.0"
env_logger = "0.8.3"
num_enum = "0.5.1"
# must match vhost-user-backend
virtio-queue = "0.1"
vmm-sys-util = "0.9.0"
structopt = "0.3"
log = "0.4.14"

[dev-dependencies]
tempfile = "3.2.0"

