[workspace]
resolver = "2"
members = [
  "vhost-device-video",
]

[patch.crates-io]
virtio-queue = { git = "https://github.com/luigix25/vm-virtio.git", branch = "fix_vsock" }
vhost = { git = "https://github.com/XanClic/vhost.git", branch = "vm-memory-0.18" }
vhost-user-backend = { git = "https://github.com/XanClic/vhost.git", branch = "vm-memory-0.18" }
