[package]
name = "vhost-device-can"
version = "0.1.0"
authors = ["Timos Ampelikiotis <t.ampelikiotis@virtualopensystems.com>"]
description = "vhost can backend device"
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
keywords = ["can", "vhost", "virt", "backend"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
xen = ["vm-memory/xen", "vhost/xen", "vhost-user-backend/xen"]

[dependencies]
clap = { version = "4.5",  features = ["derive"] }
env_logger = "0.11"
log = "0.4"
thiserror = "2.0"
queues = "1.0.2"
socketcan = "3.5.0"
vhost = { git = "https://github.com/uran0sh/vhost.git", branch = "test-change-api", features = ["vhost-user-backend"] }
vhost-user-backend = { git = "https://github.com/uran0sh/vhost.git", branch = "test-change-api" }
virtio-bindings = "0.2.5"
virtio-queue = { git = "https://github.com/rust-vmm/vm-virtio.git", branch = "main" }
vm-memory = "0.16.1"
vmm-sys-util = "0.12"

[dev-dependencies]
assert_matches = "1.5"
virtio-queue = { git = "https://github.com/rust-vmm/vm-virtio.git", branch = "main", features = ["test-utils"] }
vm-memory = { version = "0.16.1", features = ["backend-mmap", "backend-atomic"] }
