[package]
name = "vhost-device-console"
version = "0.1.0"
authors = ["Timos Ampelikiotis <t.ampelikiotis@virtualopensystems.com>"]
description = "vhost console backend device"
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
keywords = ["console", "vhost", "virt", "backend"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
xen = ["vm-memory/xen", "vhost/xen", "vhost-user-backend/xen"]

[dependencies]
console = "0.16.0"
crossterm = "0.29.0"
queues = "1.0.2"
clap = { version = "4.5",  features = ["derive"] }
env_logger = "0.11"
epoll = "4.3"
log = "0.4"
thiserror = "2.0"
vhost = { version = "0.14", features = ["vhost-user-backend"] }
vhost-user-backend = "0.19"
virtio-bindings = "0.2.5"
virtio-queue = "0.15"
vm-memory = "0.16.1"
vmm-sys-util = "0.14"

[dev-dependencies]
assert_matches = "1.5"
virtio-queue = { version = "0.15", features = ["test-utils"] }
vm-memory = { version = "0.16.1", features = ["backend-mmap", "backend-atomic"] }
