[package]
name = "vhost-device-gpu"
version = "0.1.0"
authors = ["Dorinda Bassey <dbassey@redhat.com>", "Matej Hrica <mhrica@redhat.com>"]
description = "A virtio-gpu device using the vhost-user protocol."
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
keywords = ["gpu", "vhost", "vhost-user", "virtio"]
categories = ["multimedia::video", "virtualization"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"
# "Features enabled on platform-specific dependencies for target architectures not currently being built are ignored."
# See <https://doc.rust-lang.org/cargo/reference/features.html#feature-resolver-version-2>
resolver = "2"

[features]
default = ["gfxstream"]
xen = ["vm-memory/xen", "vhost/xen", "vhost-user-backend/xen"]
gfxstream = ["rutabaga_gfx/gfxstream"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.6"
libc = "0.2"
log = "0.4"

[target.'cfg(not(target_env = "musl"))'.dependencies]
rutabaga_gfx = { version = "0.1.5", features = ["virgl_renderer"] }
thiserror = "2.0.12"
vhost = { git = "https://github.com/uran0sh/vhost.git", branch = "test-change-api", features = ["vhost-user-backend"] }
vhost-user-backend = { git = "https://github.com/uran0sh/vhost.git", branch = "test-change-api" }
virtio-bindings = "0.2.5"
virtio-queue = { git = "https://github.com/rust-vmm/vm-virtio.git", branch = "main" }
vm-memory = "0.16.1"
vmm-sys-util = "0.12.1"
bitflags = "2.9.0"

[dev-dependencies]
assert_matches = "1.5"
mockall = "0.13.0"
rusty-fork = "0.3.0"
tempfile = "3.19"
virtio-queue = { git = "https://github.com/rust-vmm/vm-virtio.git", branch = "main", features = ["test-utils"] }
vm-memory = { version = "0.16.1", features = ["backend-mmap", "backend-atomic"] }
