[package]
name = "vhost-device-gpu"
version = "0.2.0"
authors = ["Dorinda Bassey <dbassey@redhat.com>", "Matej Hrica <mhrica@redhat.com>"]
description = "A virtio-gpu device using the vhost-user protocol."
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
keywords = ["gpu", "vhost", "vhost-user", "virtio"]
categories = ["multimedia::video", "virtualization"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"
# "Features enabled on platform-specific dependencies for target architectures not currently being built are ignored."
# See <https://doc.rust-lang.org/cargo/reference/features.html#feature-resolver-version-2>
resolver = "2"

[features]
default = ["backend-virgl", "backend-gfxstream"]
xen = ["vm-memory/xen", "vhost/xen", "vhost-user-backend/xen"]
backend-gfxstream = ["rutabaga_gfx/gfxstream"]
backend-virgl = ["dep:virglrenderer"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.6"
libc = "0.2"
log = "0.4"

[target.'cfg(not(target_env = "musl"))'.dependencies]
rutabaga_gfx = "0.1.75"
thiserror = "2.0.17"
virglrenderer = {version = "0.1.3", optional = true }
vhost = { workspace = true }
vhost-user-backend = { workspace = true }
virtio-bindings = { workspace = true }
virtio-queue = { workspace = true }
vm-memory = { workspace = true }
vmm-sys-util = { workspace = true }
bitflags = "2.10.0"

[dev-dependencies]
assert_matches = "1.5"
mockall = "0.14.0"
rusty-fork = "0.3.1"
tempfile = "3.24"
virtio-queue = { version = "0.17", features = ["test-utils"] }
vm-memory = { version = "0.17.1", features = ["backend-mmap", "backend-atomic"] }
