[package]
name = "vhost-device-i2c"
version = "0.1.0"
authors = ["Viresh Kumar <viresh.kumar@linaro.org>"]
description = "vhost i2c backend device"
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
keywords = ["i2c", "vhost", "virt", "backend"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
xen = ["vm-memory/xen", "vhost/xen", "vhost-user-backend/xen"]

[dependencies]
clap = { version = "4.4",  features = ["derive"] }
env_logger = "0.10"
libc = "0.2"
log = "0.4"
thiserror = "1.0"
vhost = { version = "0.9", features = ["vhost-user-backend"] }
vhost-user-backend = "0.11"
virtio-bindings = "0.2.2"
virtio-queue = "0.10"
vm-memory = "0.14.0"
vmm-sys-util = "0.12"

[dev-dependencies]
assert_matches = "1.5"
virtio-queue = { version = "0.10", features = ["test-utils"] }
vm-memory = { version = "0.14.0", features = ["backend-mmap", "backend-atomic"] }
