[package]
name = "vhost-device-input"
version = "0.1.0"
authors = ["Leo Yan <leo.yan@linaro.org>"]
description = "vhost input backend device"
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
keywords = ["virtio-input", "vhost-user", "vhost", "virtio", "rust-vmm"]
categories = ["virtualization"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

[features]
xen = ["vm-memory/xen", "vhost/xen", "vhost-user-backend/xen"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
epoll = "4.4"
libc = "0.2"
log = "0.4"
rand = "0.9.2"
tempfile = "3.24"
thiserror = "2.0"
vhost = { workspace = true }
vhost-user-backend = { workspace = true }
virtio-bindings = { workspace = true }
virtio-queue = { workspace = true }
vm-memory = { workspace = true }
vmm-sys-util = { workspace = true }
evdev = "0.13"
nix = { version = "0.31", features = ["ioctl"] }

[dev-dependencies]
assert_matches = "1.5"
virtio-queue = { workspace = true }
vm-memory = { workspace = true }

[lints]
workspace = true
