[package]
name = "vhost-device-rng"
version = "0.1.0"
authors = ["Mathieu Poirier <mathieu.poirier@linaro.org>"]
description = "vhost RNG backend device"
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
keywords = ["rng", "vhost", "virt", "backend"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

[lints]
workspace = true

[features]
xen = ["vm-memory/xen", "vhost/xen", "vhost-user-backend/xen"]

[dependencies]
clap = { version = "4.5",  features = ["derive"] }
env_logger = "0.11"
epoll = "4.3"
libc = "0.2"
log = "0.4"
rand = "0.8.5"
tempfile = "3.12"
thiserror = "1.0"
vhost = { version = "0.12", features = ["vhost-user-backend"] }
vhost-user-backend = "0.16"
virtio-bindings = "0.2.2"
virtio-queue = "0.13"
vm-memory = "0.15.0"
vmm-sys-util = "0.12"

[dev-dependencies]
assert_matches = "1.5"
virtio-queue = { version = "0.13", features = ["test-utils"] }
vm-memory = { version = "0.15", features = ["backend-mmap", "backend-atomic"] }
