[package]
name = "vhost-device-rng"
version = "0.1.0"
authors = ["Mathieu Poirier <mathieu.poirier@linaro.org>"]
description = "vhost RNG backend device"
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
keywords = ["rng", "vhost", "virt", "backend"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

[features]
xen = ["vm-memory/xen", "vhost/xen", "vhost-user-backend/xen"]

[dependencies]
clap = { version = "4.5",  features = ["derive"] }
env_logger = "0.11"
epoll = "4.4"
libc = "0.2"
log = "0.4"
rand = "0.9.2"
tempfile = "3.24"
thiserror = "2.0"
vhost = { workspace = true }
vhost-user-backend = { workspace = true }
virtio-bindings = { workspace = true }
virtio-queue = { workspace = true }
vm-memory = { workspace = true }
vmm-sys-util = { workspace = true }

[dev-dependencies]
assert_matches = "1.5"
virtio-queue = { workspace = true }
vm-memory = { workspace = true }

[lints]
workspace = true
