[package]
name = "vhost-device-rtc"
version = "0.1.0"
authors = ["Manos Pitsidianakis <manos.pitsidianakis@linaro.org>"]
description = "Real time clock/timer VIRTIO device backend"
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
keywords = ["vhost", "virtio", "backend"]
categories = ["virtualization"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

[features]
xen = ["vm-memory/xen", "vhost/xen", "vhost-user-backend/xen"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
libc = "0.2"
log = "0.4"
nix = { version = "0.30", features = ["time"] }
thiserror = "2.0"
vhost = { version = "0.15", features = ["vhost-user-backend"] }
vhost-user-backend = "0.21"
virtio-bindings = "0.2.5"
virtio-queue = "0.17"
vm-memory = "0.17.1"
vmm-sys-util = "0.15"

[dev-dependencies]
assert_matches = "1.5"
virtio-queue = { version = "0.17", features = ["test-utils"] }
vm-memory = { version = "0.17.1", features = ["backend-mmap", "backend-atomic"] }

[lints]
workspace = true
