[package]
name = "vhost-device-rtc"
version = "0.1.0"
authors = ["Manos Pitsidianakis <manos.pitsidianakis@linaro.org>"]
description = "Real time clock/timer VIRTIO device backend"
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
keywords = ["vhost", "virtio", "backend"]
categories = ["virtualization"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

[features]
xen = ["vm-memory/xen", "vhost/xen", "vhost-user-backend/xen"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
env_logger = "0.11"
libc = "0.2"
log = "0.4"
nix = { version = "0.31", features = ["time"] }
thiserror = "2.0"
vhost = { workspace = true }
vhost-user-backend = { workspace = true }
virtio-bindings = { workspace = true }
virtio-queue = { workspace = true }
vm-memory = { workspace = true }
vmm-sys-util = { workspace = true }

[dev-dependencies]
assert_matches = "1.5"
virtio-queue = { workspace = true, features = ["test-utils"] }
vm-memory = { workspace = true, features = ["backend-mmap", "backend-atomic"] }

[lints]
workspace = true
