[package]
name = "vhost-device-scmi"
version = "0.1.0"
authors = ["Milan Zamazal <mzamazal@redhat.com>"]
description = "vhost-user SCMI backend device"
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
keywords = ["scmi", "vhost", "virt", "backend"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

[dependencies]
clap = { version = "4.5",  features = ["derive"] }
env_logger = "0.11"
itertools = "0.13"
log = "0.4"
thiserror = "1.0"
vhost = { version = "0.11", features = ["vhost-user-backend"] }
vhost-user-backend = "0.15"
virtio-bindings = "0.2"
virtio-queue = "0.12"
vm-memory = "0.14.1"
vmm-sys-util = "0.12"

[dev-dependencies]
assert_matches = "1.5"
virtio-queue = { version = "0.12", features = ["test-utils"] }
