[package]
name = "vhost-device-scmi"
version = "0.3.0"
authors = ["Milan Zamazal <mzamazal@redhat.com>"]
description = "vhost-user SCMI backend device"
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
keywords = ["scmi", "vhost", "virt", "backend"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

[dependencies]
clap = { version = "4.5",  features = ["derive"] }
env_logger = "0.11"
itertools = "0.13"
log = "0.4"
thiserror = "1.0"
vhost = { workspace = true, features = ["vhost-user-backend"] }
vhost-user-backend = { workspace = true }
virtio-bindings = { workspace = true }
virtio-queue = { workspace = true }
vm-memory = { workspace = true }
vmm-sys-util = { workspace = true }

[dev-dependencies]
assert_matches = "1.5"
virtio-queue = { workspace = true, features = ["test-utils"] }
