[package]
name = "vhost-device-scmi"
version = "0.3.0"
authors = ["Milan Zamazal <mzamazal@redhat.com>"]
description = "vhost-user SCMI backend device"
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
keywords = ["scmi", "vhost", "virt", "backend"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

[dependencies]
clap = { version = "4.5",  features = ["derive"] }
env_logger = "0.11"
itertools = "0.14"
log = "0.4"
thiserror = "2.0"
vhost = { git = "https://github.com/uran0sh/vhost.git", branch = "test-change-api", features = ["vhost-user-backend"] }
vhost-user-backend = { git = "https://github.com/uran0sh/vhost.git", branch = "test-change-api" }
virtio-bindings = "0.2"
virtio-queue = { git = "https://github.com/rust-vmm/vm-virtio.git", branch = "main" }
vm-memory = "0.16.1"
vmm-sys-util = "0.12"

[dev-dependencies]
assert_matches = "1.5"
virtio-queue = { git = "https://github.com/rust-vmm/vm-virtio.git", branch = "main", features = ["test-utils"] }
