[package]
name = "vhost-device-scsi"
version = "0.1.0"
authors = ["Gaelan Steele <gbs@canishe.com>", "Erik Schilling <erik.schilling@linaro.org>"]
description = "vhost scsi backend device"
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
keywords = ["scsi", "vhost", "virt", "backend"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

[lints]
workspace = true

[features]
xen = ["vm-memory/xen", "vhost/xen", "vhost-user-backend/xen"]

[dependencies]
clap = { version = "4.5",  features = ["derive"] }
env_logger = "0.11"
epoll = "4.3"
log = "0.4"
num_enum = "0.7"
thiserror = "1.0"
vhost = { version = "0.12", features = ["vhost-user-backend"] }
vhost-user-backend = "0.16"
virtio-bindings = "0.2.2"
virtio-queue = "0.13"
vm-memory = "0.15.0"
vmm-sys-util = "0.12"

[dev-dependencies]
assert_matches = "1.5"
tempfile = "3.12.0"
