[package]
name = "vhost-device-scsi"
version = "0.1.0"
authors = ["Gaelan Steele <gbs@canishe.com>", "Erik Schilling <erik.schilling@linaro.org>"]
description = "vhost scsi backend device"
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
keywords = ["scsi", "vhost", "virt", "backend"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
xen = ["vm-memory/xen", "vhost/xen", "vhost-user-backend/xen"]

[dependencies]
clap = { version = "4.5",  features = ["derive"] }
env_logger = "0.11"
epoll = "4.4"
log = "0.4"
thiserror = "2.0"
vhost = { workspace = true }
vhost-user-backend = { workspace = true }
virtio-bindings = { workspace = true }
virtio-queue = { workspace = true }
vm-memory = { workspace = true }
vmm-sys-util = { workspace = true }

[dev-dependencies]
assert_matches = "1.5"
tempfile = "3.24.0"
virtio-queue = { version = "0.17", features = ["test-utils"] }

[lints]
workspace = true
