[package]
name = "vhost-device-sound"
version = "0.3.0"
authors = ["Manos Pitsidianakis <manos.pitsidianakis@linaro.org>", "Dorinda Bassey <dbassey@redhat.com>", "Matias Ezequiel Vara Larsen <mvaralar@redhat.com>"]
description = "A virtio-sound device using the vhost-user protocol."
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
keywords = ["vhost", "sound", "virtio-sound", "virtio-snd", "virtio"]
categories = ["multimedia::audio", "virtualization"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

[features]
xen = ["vm-memory/xen", "vhost/xen", "vhost-user-backend/xen"]
default = ["alsa-backend", "pw-backend", "gst-backend"]
alsa-backend = ["dep:alsa"]
pw-backend = ["pw"]
gst-backend = ["dep:gst", "dep:gst-app", "dep:gst-audio"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
thiserror = "2.0"
vhost = { version = "0.15", features = ["vhost-user-backend"] }
vhost-user-backend = "0.21"
virtio-bindings = "0.2.5"
virtio-queue = "0.17"
vm-memory = "0.18.0"
vmm-sys-util = "0.15"

# Make alsa and pipewire backends available only on gnu
[target.'cfg(target_env = "gnu")'.dependencies]
alsa = { version = "0.11", optional = true }
pw = { package = "pipewire", version = "0.9.2", optional = true }
gst = { package = "gstreamer", version = "0.24.2", optional = true, features = ["v1_24"] }
gst-app = { package = "gstreamer-app", version = "0.24.2", optional = true, features = ["v1_24"] }
gst-audio = {package = "gstreamer-audio", version = "0.24.2", optional = true, features = ["v1_24"] }

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3.24"
virtio-queue = { version = "0.17", features = ["test-utils"] }
vm-memory = { version = "0.18.0", features = ["backend-mmap", "backend-atomic"] }

[target.'cfg(target_env = "gnu")'.dev-dependencies]
rand = { version = "0.9.2" }
rusty-fork = { version = "0.3.1" }

[lints]
workspace = true
