[package]
name = "vhost-device-template"
version = "0.1.0"
authors = ["Viresh Kumar <viresh.kumar@linaro.org>"]
description = "Template for a vhost backend device"
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
keywords = ["template", "vhost", "virt", "backend"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[features]
xen = ["vm-memory/xen", "vhost/xen", "vhost-user-backend/xen"]

[dependencies]
clap = { version = "4.5",  features = ["derive"] }
env_logger = "0.11"
libc = "0.2"
log = "0.4"
thiserror = "1.0"
vhost = { version = "0.12", features = ["vhost-user-backend"] }
vhost-user-backend = "0.16"
virtio-bindings = "0.2.2"
virtio-queue = "0.13"
vm-memory = "0.15.0"
vmm-sys-util = "0.12"

[dev-dependencies]
assert_matches = "1.5"
virtio-queue = { version = "0.13", features = ["test-utils"] }
vm-memory = { version = "0.15.0", features = ["backend-mmap", "backend-atomic"] }
